2000-10-21  Geoffrey Keating  <geoffk@cygnus.com>

	* sysdeps/unix/sysv/linux/powerpc/mmap64.c: Define PAGE_SHIFT
	explicitly rather than getting it from <asm/page.h>.

2000-10-24  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-close.c (_dl_close): Handle relocation dependencies of
	the dependencies of the object currently unloaded.

	* elf/dl-close.c (_dl_close): Don't free memory for global scope
	list immediately when empty.  Move code to...
	(free_mem): ...here.  Called as part of __libc_subfreeres list.

	* elf/dl-deps.c (_dl_map_object_deps): Put l_initfini array before
	r_list array in allocated memory.
	* elf/dl-close.c (_dl_close): Optimize access to l_initfini list
	and remove use of r_list.

	* elf/dl-close.c (_dl_close): Use correct list (l_initfini) when
	computing new opencounts.
	* elf/Makefile: Add rules to build and run neededtest3.
	* neededtest3.c: New file.
	* neededobj4.c: New file.

	* elf/neededtest.c (main): Correct tests for failing dlopen.

2000-10-24  Andreas Jaeger  <aj@suse.de>

	* elf/dl-lookup.c (add_dependency): Remove unused variable j.

2000-10-24  Ulrich Drepper  <drepper@redhat.com>

	* malloc/obstack.c (_obstack_newchunk): Correctly align first returned
	block.
	* malloc/tst-obstack.c: New file.
	Patch and test case by Alexandre Duret-Lutz <duret_g@epita.fr>.
	* malloc/Makefile (tests): Add tst-obstack.

	Complete revamp of the reference counter handling.
	* include/link.h (struct link_map): Add l_idx field.
	* elf/dl-close.c: Handle decrementing of reference counters more
	correctly. If necessary decrement reference counters of dependencies
	of dependencies.
	* elf/dl-lookup.c (add_dependency): Only increment reference counter
	of the object itself and not also its dependencies.
	* elf/dl-open.c: Increment reference counters here.
	* elf/dl-deps.c: Remove reference counter handling here.
	* elf/dl-load.c: Likewise.
	* elf/rtld.c: Adjust for _dl_map_deps not handling reference counters.
